<resources>
    <string name="app_name" translatable="false">Salaam</string>
    <string name="feedback_mail_subject_s" translatable="false">Feedback on %s for Android</string>
    <string name="activity_surah_end_title">You have now\nreached the end of this Surah.</string>
    <string name="activity_surah_end_text">May Allah reward you for taking the\ntime and effort to memorise\n</string>
    <string name="activity_surah_end_text_surah_s" translatable="false">Surah %s</string>
    <string name="activity_surah_end_button">Repeat</string>
    <string name="fragment_menu_language">Language</string>
    <string name="fragment_menu_feedback">Feedback</string>
    <string name="fragment_menu_rating">Rating</string>
    <string name="fragment_menu_language_en_title" translatable="false">English</string>
    <string name="fragment_menu_language_en_text" translatable="false">Saheeh International</string>
    <string name="fragment_menu_language_nl_title" translatable="false">Nederlands</string>
    <string name="fragment_menu_language_nl_text" translatable="false">Sofjan S. Siregar</string>
    <string name="surah_al_fatiha_description">The Opener</string>
    <string name="surah_an_nas_description">The Mankind</string>
    <string name="surah_al_falaq_description">The Daybreak</string>
    <string name="surah_al_ikhlas_description">The Sincerity</string>
    <string name="surah_al_masad_description">The Palm Fiber</string>
    <string name="surah_an_nasr_description">The Divine Support</string>
    <string name="surah_al_kafirun_description">The Disbelievers</string>
    <string name="surah_al_kawthar_description">The Abundance</string>
    <string name="surah_al_maun_description">The Small Kindesses</string>
    <string name="surah_quraysh_description">Quraysh</string>
    <string name="surah_al_fil_description">The Elephant</string>
    <string name="surah_al_humazah_description">The Traducer</string>
    <string name="surah_al_asr_description">De Declining Day</string>
    <string name="surah_at_takathur_description">Competition in Increase</string>
    <string name="surah_al_qariah_description">The Calamity</string>
    <string name="surah_al_adiyat_description">The Courser</string>
    <string name="surah_az_zalzalah_description">The Earthquake</string>
    <string name="surah_al_bayyinah_description">The Clear Proof</string>
    <string name="surah_al_qadr_description">The Power</string>
    <string name="surah_al_alaq_description">The Clot</string>
    <string name="surah_at_tin_description">The Fig</string>
    <string name="surah_ash_sharh_description">The Relief</string>
    <string name="surah_ad_duhaa_description">The Morning Hours</string>
    <string name="surah_al_layl_description">The Night</string>
    <string name="surah_ash_shams_description">The Sun</string>
    <string name="surah_al_balad_description">The City</string>
    <string name="surah_al_fajr_description">The Dawn</string>
    <string name="surah_al_ghashiyah_description">The Overwhelming</string>
    <string name="surah_al_ala_description">The Most High</string>
    <string name="surah_at_tariq_description">The Nightcommer</string>
    <string name="surah_an_naba">The Tidings</string>
    <string name="surah_an_naziat">Those Who Pull Out</string>
    <string name="surah_Abasa">He Frowned</string>
    <string name="surah_At_Takwir">The Overthrowing</string>
    <string name="surah_Al_Infitaar">The Cleaving</string>
    <string name="surah_Al_Mutaffifin">The Defrauding</string>
    <string name="surah_Al_Inshiqaq">The Sundering</string>
    <string name="surah_Al_Burooj">The Stars</string>
    <string name="verse_al_fatiha_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_fatiha_1">[All] praise is [due] to Allah,\nLord of the worlds -</string>
    <string name="verse_al_fatiha_2">The Entirely Merciful,\nthe Especially Merciful,</string>
    <string name="verse_al_fatiha_3">Sovereign of the\nDay of Recompense.</string>
    <string name="verse_al_fatiha_4">It is You we worship\nand You we ask for help.</string>
    <string name="verse_al_fatiha_5">Guide us\nto the straight path -</string>
    <string name="verse_al_fatiha_6">The path of those upon whom You have bestowed favor, not of those who have evoked [Your] anger or of those who are astray.</string>
    <string name="verse_an_nas_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_an_nas_1">Say, “I seek refuge in the Lord of mankind,</string>
    <string name="verse_an_nas_2">The Sovereign of mankind.</string>
    <string name="verse_an_nas_3">The God of mankind,</string>
    <string name="verse_an_nas_4">From the evil\nof the retreating whisperer -</string>
    <string name="verse_an_nas_5">Who whispers [evil]\ninto the breasts of mankind -</string>
    <string name="verse_an_nas_6">From among the jinn and mankind.”</string>
    <string name="verse_al_falaq_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_falaq_1">Say, “I seek refuge in the Lord of daybreak</string>
    <string name="verse_al_falaq_2">From the evil\nof that which He created</string>
    <string name="verse_al_falaq_3">And from the evil\nof darkness when it settles</string>
    <string name="verse_al_falaq_4">And from the evil\nof the blowers in knots</string>
    <string name="verse_al_falaq_5">And from the evil of an envier when he envies.\"</string>
    <string name="verse_al_ikhlas_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_ikhlas_1">Say, \"He is Allah, [who is] One,</string>
    <string name="verse_al_ikhlas_2">Allah,\nthe Eternal Refuge.</string>
    <string name="verse_al_ikhlas_3">He neither\nbegets nor is born,</string>
    <string name="verse_al_ikhlas_4">Nor is there to Him any equivalent.\"</string>
    <string name="verse_al_masad_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_masad_1">May the hands of\nAbu Lahab be ruined, and ruined is he.</string>
    <string name="verse_al_masad_2">His wealth will not avail\nhim or that which he gained.</string>
    <string name="verse_al_masad_3">He will [enter to] burn\nin a Fire of [blazing] flame</string>
    <string name="verse_al_masad_4">And his wife\n[as well] - the carrier of firewood.</string>
    <string name="verse_al_masad_5">Around her neck\nis a rope of [twisted] fiber.</string>
    <string name="verse_an_nasr_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_an_nasr_1">When the victory of Allah\nhas come and the conquest,</string>
    <string name="verse_an_nasr_2">And you see the people entering\ninto the religion of Allah in multitudes,</string>
    <string name="verse_an_nasr_3">Then exalt [Him] with praise of your Lord and ask forgiveness of Him. Indeed, He is ever Accepting of repentance.</string>
    <string name="verse_al_kafirun_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_kafirun_1">Say, \"O disbelievers,</string>
    <string name="verse_al_kafirun_2">I do not\nworship what you worship.</string>
    <string name="verse_al_kafirun_3">Nor are you\nworshippers of what I worship.</string>
    <string name="verse_al_kafirun_4">Nor will I be a\nworshipper of what you worship.</string>
    <string name="verse_al_kafirun_5">Nor will you be\nworshippers of what I worship.</string>
    <string name="verse_al_kafirun_6">For you is your religion, and for me is my religion.\"</string>
    <string name="verse_al_kawthar_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_kawthar_1">Indeed, We have granted you,\n[O Muhammad], al-Kawthar.</string>
    <string name="verse_al_kawthar_2">So pray to your\nLord and sacrifice [to Him alone].</string>
    <string name="verse_al_kawthar_3">Indeed,\nyour enemy is the one cut off.</string>
    <string name="verse_al_maun_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_maun_1">Have you seen the\none who denies the Recompense?</string>
    <string name="verse_al_maun_2">For that is the one\nwho drives away the orphan</string>
    <string name="verse_al_maun_3">And does not\nencourage the feeding of the poor.</string>
    <string name="verse_al_maun_4">So woe to those who pray</string>
    <string name="verse_al_maun_5">[But] who are\nheedless of their prayer -</string>
    <string name="verse_al_maun_6">Those who\nmake show [of their deeds]</string>
    <string name="verse_al_maun_7">And withhold\n[simple] assistance.</string>
    <string name="verse_quraysh_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_quraysh_1">For the accustomed\nsecurity of the Quraysh -</string>
    <string name="verse_quraysh_2">Their accustomed security [in]\nthe caravan of winter and summer -</string>
    <string name="verse_quraysh_3">Let them worship\nthe Lord of this House,</string>
    <string name="verse_quraysh_4">Who has fed them,\n[saving them] from hunger and\nmade them safe, [saving them] from fear.</string>
    <string name="verse_al_fil_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_fil_1">Have you not considered,\n[O Muhammad], how your Lord dealt\nwith the companions of the elephant?</string>
    <string name="verse_al_fil_2">Did He not make\ntheir plan into misguidance?</string>
    <string name="verse_al_fil_3">And He sent\nagainst them birds in flocks,</string>
    <string name="verse_al_fil_4">Striking them\nwith stones of hard clay,</string>
    <string name="verse_al_fil_5">And He\nmade them like eaten straw.</string>
    <string name="verse_al_humazah_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_humazah_1">Woe to\nevery scorner and mocker</string>
    <string name="verse_al_humazah_2">Who collects wealth\nand [continuously] counts it.</string>
    <string name="verse_al_humazah_3">He thinks that\nhis wealth will make him immortal.</string>
    <string name="verse_al_humazah_4">No! He will surely\nbe thrown into the Crusher.</string>
    <string name="verse_al_humazah_5">And what can make\nyou know what is the Crusher?</string>
    <string name="verse_al_humazah_6">It is the fire of Allah,\n[eternally] fueled,</string>
    <string name="verse_al_humazah_7">Which mounts\ndirected at the hearts.</string>
    <string name="verse_al_humazah_8">Indeed,\nHellfire will be closed down upon them</string>
    <string name="verse_al_humazah_9">In extended columns.</string>
    <string name="verse_al_asr_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_al_asr_1">By time,</string>
    <string name="verse_al_asr_2">Indeed,\nmankind is in loss,</string>
    <string name="verse_al_asr_3">Except for those who have believed and done righteous deeds and advised each other to truth and advised each other to patience.</string>
    <string name="verse_at_takathur_0">In the name of Allah,\nthe Entirely Merciful, the Especially Merciful.</string>
    <string name="verse_at_takathur_1">Competition in\n[worldly] increase diverts you</string>
    <string name="verse_at_takathur_2">Until you\nvisit the graveyards.</string>
    <string name="verse_at_takathur_3">No!\nYou are going to know.</string>
    <string name="verse_at_takathur_4">Then no!\nYou are going to know.</string>
    <string name="verse_at_takathur_5">No! If you only knew\nwith knowledge of certainty.</string>
    <string name="verse_at_takathur_6">You will\nsurely see the Hellfire.</string>
</resources>